# wikimusic-api

./: .gitignore  CHANGELOG.org  Makefile  README.org  cabal.project  flake.nix  stack.yaml  wikimusic-api.cabal
.github/workflows/: byggsteg.yaml  on-pull-request-byggsteg.yaml  on-push-to-trunk-byggsteg.yaml
app/: Main.hs
resources/: wiki-data.sql  wiki-schema.sql  wikimusic.sqlite
resources/config/: run-local.toml  run-production.toml
resources/docker/: local-compose.yaml
resources/migrations/sqlite/: 0-initial-schema-definition.sql  1-initial-schema-definition.sql  1-restore-data-from-2024-09-05.sql
resources/postgresql/migrations/: 0-init.sql  1_user.sql  2-user-roles.sql  3-user-email-unique.sql  4-add-views.sql  5-add-token.sql  6-tok.sql  7-add-description-entities.sql
resources/scripts/: grab-db-backup.bash  mail-test.py
src/WikiMusic/: Boot.hs  Config.hs  Protolude.hs
src/WikiMusic/Beam/: Artist.hs  Database.hs  Genre.hs  Relations.hs  Song.hs  User.hs  Util.hs
src/WikiMusic/Clock/: LiveClock.hs
src/WikiMusic/Console/: Logger.hs
src/WikiMusic/Free/: ArtistCommand.hs  ArtistQuery.hs  AuthQuery.hs  Clock.hs  GenreCommand.hs  GenreQuery.hs  Logger.hs  MailCommand.hs  SongCommand.hs  SongQuery.hs  UserCommand.hs  UserQuery.hs
src/WikiMusic/Interaction/: Artist.hs  Auth.hs  Genre.hs  Mail.hs  Song.hs  User.hs
src/WikiMusic/Model/: Config.hs  Env.hs
src/WikiMusic/Persistence/: ArtistCommand.hs  ArtistQuery.hs  AuthQuery.hs  GenreCommand.hs  GenreQuery.hs  Migration.hs  ReadAbstraction.hs  SongCommand.hs  SongQuery.hs  UserCommand.hs  UserQuery.hs  WriteAbstraction.hs
src/WikiMusic/Persistence/Model/: Artist.hs  Genre.hs  Other.hs  Song.hs
src/WikiMusic/PostgreSQL/: ArtistCommand.hs  ArtistQuery.hs  AuthQuery.hs  GenreCommand.hs  GenreQuery.hs  Migration.hs  SongCommand.hs  SongQuery.hs  UserCommand.hs  UserQuery.hs
src/WikiMusic/SMTP/: MailCommandSES.hs
src/WikiMusic/SQLite/: ArtistCommand.hs  ArtistQuery.hs  AuthQuery.hs  GenreCommand.hs  GenreQuery.hs  Migration.hs  SongCommand.hs  SongQuery.hs  UserCommand.hs  UserQuery.hs
src/WikiMusic/Servant/: ApiSetup.hs  ArtistRoutes.hs  AuthRoutes.hs  GenreRoutes.hs  SongRoutes.hs  UserRoutes.hs  Utilities.hs
src/WikiMusic/Smtp/: MailCommandSES.hs
src/WikiMusic/Sqlite/: ArtistCommand.hs  ArtistQuery.hs  AuthQuery.hs  GenreCommand.hs  GenreQuery.hs  SongCommand.hs  SongQuery.hs  UserCommand.hs  UserQuery.hs  Yggdrasil.hs
test/: Spec.hs
test/WikiMusic/Test/: Head.hs  Integration.hs  Principium.hs
